perf(protocol): decode command text and replacements without temporary arrays